name:                DropboxAPI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DropboxAPI#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dropbox.Types
                     , Dropbox.APICall
                     , Dropbox.Instances
                     , Dropbox
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.1.2.0 && < 1.2
                     , http-conduit >= 2.2.3.2 && < 2.3
                     , bytestring >= 0.10.8.1 && < 0.11
                     , mtl
  default-language:    Haskell2010
